enumcapsulate/tests/derive-tests/try_into/fail/union.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/try_into/fail/union.rs:4:11
  |
4 | pub union Union {
  |           ^^^^^
